Fix debugging individual tests